[package]
edition = "2021"
name = "oxide"
version = "0.1.0"

[[bin]]
name = "client"
path = "src/client/main.rs"

[[bin]]
name = "server"
path = "src/server/main.rs"

[dependencies]
bson = {version = "2.3.0", features = ["chrono-0_4"]}
byteorder = "1.4.3"
chrono = "0.4"
clap = {version = "3.0", features = ["derive"]}
mongodb = "2.1"
pretty-hex = "0.3.0"
serde = "1"
tokio = "1"
