[package]
edition = "2021"
name = "oxide"
version = "0.1.0"

[[bin]]
name = "client"
path = "src/client/main.rs"

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
autoincrement = {version = "1", features = ["derive", "async"]}
bson = {version = "2.3.0", features = ["chrono-0_4"]}
byteorder = "1.4.3"
chrono = "0.4"
clap = {version = "3.0", features = ["derive"]}
dotenv = "0.15"
futures = "0.3"
mongodb = "2.1"
postgres = {version = "0.19", features = ["with-serde_json-1"]}
pretty-hex = "0.3.0"
serde = "1"
serde_json = {version = "1", features = ["preserve_order"]}
sql_lexer = "0.9.3"
tokio = "1"
