[package]
description = "A database compatible with MongoDB Wire Protocol that uses PostgreSQL for backend storage."
edition = "2021"
name = "oxide"
version = "0.1.4"

[dependencies]
autoincrement = {version = "1", features = ["derive", "async"]}
bson = {version = "2.3.0", features = ["chrono-0_4"]}
byteorder = "1.4.3"
chrono = "0.4"
clap = {version = "3.2.8", features = ["derive"]}
dotenv = "0.15"
env_logger = "0.9.0"
futures = "0.3"
indoc = "1.0.6"
log = "0.4"
mongodb = {version = "2.1", features = ["tokio-sync"]}
# mongodb-language-model = {path = "../mongodb-language-model-rust"}
color-eyre = "0.6"
eyre = "0.6"
mongodb-language-model = "0.1.6"
nickel = "0.11"
portpicker = "0.1"
postgres = {version = "0.19", features = ["with-serde_json-1"]}
pretty-hex = "0.3.0"
r2d2 = "0.8.10"
r2d2_postgres = "0.18.1"
regex = "1"
rust-embed = "6.4.0"
serde = "1"
serde_json = {version = "1", features = ["preserve_order"]}
sql_lexer = "0.9.3"
tokio = "1"

[dependencies.uuid]
features = [
  "v4", # Lets you generate random UUIDs
  "fast-rng", # Use a faster (but still sufficiently random) RNG
  "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
version = "1.1.2"
